--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "pslr"
-version = "0.1.0"
+description = "Command-line tool for Public Suffix List interactions."
+version = "1.0.0"
 edition = "2024"
+authors = ["Ryan Chandler <support@ryangjchandler.co.uk>"]
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0.100"
