Setup cargo dist

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ repository = "https://github.com/ryangjchandler/pslr"
 anyhow = "1.0.100"
 clap = { version = "4.5.48", features = ["derive"] }
 publicsuffix = "2.3.0"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
